# SkeletalAnimation

./: .gitignore  README.md
Skeletal/: CMakeLists.txt
Skeletal/Resources/shaders/: box.frag  deferred.frag  deferred.vert  gbuffer.frag  gbuffer.vert  lightBox.frag  lightBox.vert  particle.frag  particle.vert  simple.frag  skeletal.vert  sky.frag  sky.vert  terrain.frag  terrain.vert
Skeletal/src/: Camera.cpp  Camera.h  Game.cpp  Game.h  HeightsGenerator.cpp  HeightsGenerator.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParticleSystem.cpp  ParticleSystem.h  PerlinNoise.cpp  PerlinNoise.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Sky.cpp  Sky.h  Terrain.cpp  Terrain.h  TextureManager.cpp  TextureManager.h  Util.h  main.cpp
